; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/extr_tcpip.c_tcpip_close.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/extr_tcpip.c_tcpip_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tcpip_sock = type { i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tcpip_close(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.tcpip_sock*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.tcpip_sock* @tcpip_getsocket(i32 %4)
  store %struct.tcpip_sock* %5, %struct.tcpip_sock** %3, align 8
  %6 = load %struct.tcpip_sock*, %struct.tcpip_sock** %3, align 8
  %7 = icmp eq %struct.tcpip_sock* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  br label %16

9:                                                ; preds = %1
  %10 = load %struct.tcpip_sock*, %struct.tcpip_sock** %3, align 8
  %11 = getelementptr inbounds %struct.tcpip_sock, %struct.tcpip_sock* %10, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  %13 = call i32 @uip_tcp_close(i32* %12)
  %14 = load %struct.tcpip_sock*, %struct.tcpip_sock** %3, align 8
  %15 = getelementptr inbounds %struct.tcpip_sock, %struct.tcpip_sock* %14, i32 0, i32 0
  store i32* null, i32** %15, align 8
  br label %16

16:                                               ; preds = %9, %8
  ret void
}

declare dso_local %struct.tcpip_sock* @tcpip_getsocket(i32) #1

declare dso_local i32 @uip_tcp_close(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
